@@ -113,7 +113,7 @@ then you would suppress its error messages with
 Checker, for which you use the annotation name; see
 Section~\ref{subtyping-using}.)
 Sometimes, a checker honors multiple \emph{checkername} arguments; use
-the \code{-AshowSuppressWarningKeys} command-line option to see them.
+the \code{-AshowSuppressWarningStrings} command-line option to see them.
 Using \code{"allcheckers"} as the checkername applies to all checkers; this is not
 recommended, except for messages common to all checkers such as
 purity-related messages when using \<-AcheckPurityAnnotations>.
@@ -802,7 +802,7 @@ annotations, those compatibility annotations are no longer necessary.
 %  LocalWords:  TODO AsuppressWarnings AssumeAssertion AonlyUses AonlyDefs
 %  LocalWords:  ing warningkey redundantNullComparison qual proc Decl
 %  LocalWords:  lastsinglesuppression classfiles AwarnUnneededSuppressions
-%%  LocalWords:  AshowSuppressWarningKeys NullableType NonNullType JUnit's
+%%  LocalWords:  AshowSuppressWarningStrings NullableType NonNullType JUnit's
 %%  LocalWords:  PolyNullType MonotonicNonNullType KeyForType NullableDecl
 %%  LocalWords:  NonNullDecl PolyNullDecl MonotonicNonNullDecl KeyForDecl
 %%  LocalWords:  refactored AassumeAssertionsAreEnabled assertNotNull
